<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_story_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingVertical="16dp"
    tools:context=".ui.story.detail.DetailStoryActivity">

    <com.github.chrisbanes.photoview.PhotoView
        android:id="@+id/detail_img_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="60dp"
        android:background="@color/abu_abu_terang"
        android:scaleType="centerCrop"
        android:transitionName="img_story"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


    <ImageButton
        android:id="@+id/detail.btn_back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/back"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detail.header"
        style="@style/Text.Header22_appbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/detail_story"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/detail.btn_back"
        app:layout_constraintEnd_toStartOf="@id/detail.img_btn_add_post"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detail.btn_back"
        app:layout_constraintTop_toTopOf="@id/detail.btn_back"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/detail.img_btn_add_post"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/add_story"
        android:padding="14dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_post_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/detail.btn_like"
        style="@style/Icon"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/like"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_like"
        app:layout_constraintBottom_toTopOf="@id/detail.like_sum"
        app:layout_constraintEnd_toEndOf="@id/detail.like_sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.like_sum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detail.like_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/_25rb"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detail.btn_comment"
        app:layout_constraintEnd_toEndOf="@id/detail.btn_comment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.btn_comment"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/detail.btn_comment"
        style="@style/Icon"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/comment"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_comment"
        app:layout_constraintBottom_toTopOf="@id/detail.comment_sum"
        app:layout_constraintEnd_toEndOf="@id/detail.comment_sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.comment_sum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detail.comment_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/_5rb"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detail.btn_share"
        app:layout_constraintEnd_toEndOf="@id/detail.btn_share"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.btn_share"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/detail.btn_share"
        style="@style/Icon"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/share"
        android:padding="6dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toTopOf="@id/detail.share_sum"
        app:layout_constraintEnd_toEndOf="@id/detail.share_sum"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.share_sum"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/detail.share_sum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/_15rb"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/detail.btn_options"
        app:layout_constraintEnd_toEndOf="@id/detail.btn_options"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/detail.btn_options"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/detail.btn_options"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/option"
        android:padding="18dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_options"
        app:layout_constraintBottom_toTopOf="@id/detail.img_btn_music"
        app:layout_constraintEnd_toEndOf="@id/detail.img_btn_music"
        app:layout_constraintStart_toStartOf="@id/detail.img_btn_music"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/detail.img_btn_music"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/transparents"
        android:contentDescription="@string/music"
        android:padding="12dp"
        android:scaleType="centerInside"
        android:src="@drawable/ic_music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:tint="@color/white" />


    <FrameLayout
        android:id="@+id/detail.profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@id/detail.desc_expand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.example.instogramapplication.widget.GradientRingView
            android:layout_width="44dp"
            android:layout_height="44dp"
            app:ringCenterColor="@color/color_variant"
            app:ringEndColor="@color/color_base"
            app:ringStartColor="@color/color_base"
            app:ringThickness="2dp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="6dp"
            android:clickable="true"
            android:focusable="true"
            android:transitionName="profile"
            app:shapeAppearanceOverlay="@style/Circular" />
    </FrameLayout>

    <TextView
        android:id="@+id/detail.user"
        style="@style/Text.Konten15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:transitionName="username"
        app:layout_constraintBottom_toBottomOf="@id/detail.profil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detail.profil"
        app:layout_constraintTop_toTopOf="@id/detail.profil"
        app:layout_constraintVertical_bias="0.2" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:contentDescription="@string/centang"
        android:padding="3dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_centang_ungu"
        app:layout_constraintBottom_toBottomOf="@id/detail.user"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/detail.user"
        app:layout_constraintTop_toTopOf="@id/detail.user"
        app:layout_constraintVertical_bias="0.5" />


    <TextView
        android:id="@+id/detail.tv_berjalan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="top"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/instogram_mobile_application_experience"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintEnd_toStartOf="@id/detail.btn_options"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/detail.user"
        app:layout_constraintTop_toBottomOf="@id/detail.user"
        app:layout_constraintVertical_bias="0.0" />


    <at.blogc.android.views.ExpandableTextView
        android:id="@+id/detail.desc_expand"
        style="@style/Text.Konten15"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/white"
        android:transitionName="desc"
        app:animation_duration="500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detail.img_btn_music"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>