<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.list.ListStoryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparents">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/halo_main"
                    style="@style/Text.Header24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lobster"
                    android:text="@string/title_home"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_notif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:backgroundTint="@color/transparents"
                    android:contentDescription="@string/desc_notification_icon"
                    android:src="@drawable/ic_notifications"
                    app:tint="@color/black" />

                <ImageButton
                    android:id="@+id/btn_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="8dp"
                    android:backgroundTint="@color/transparents"
                    android:contentDescription="@string/desc_settings_icon"
                    android:src="@drawable/ic_settings"
                    app:tint="@color/black" />
            </LinearLayout>


        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <uz.jamshid.library.IGRefreshLayout
        android:id="@+id/home.swip_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:customBar="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:offsetTop="120">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:id="@+id/story.scroll_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <!--        simmer-->
                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/story.simmer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:shimmer_auto_start="true"
                        app:shimmer_direction="left_to_right"
                        app:shimmer_duration="1500"
                        app:shimmer_repeat_count="3">

                        <include layout="@layout/simmer_story_home" />
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/home.lottie_error"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/error" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/home.lottie_layout_error_connect"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_gravity="center"
                        android:visibility="invisible"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="false"
                        app:lottie_rawRes="@raw/no_connection" />
                </FrameLayout>
            </ScrollView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list_story_y" />
        </FrameLayout>
    </uz.jamshid.library.IGRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

